@@ -41,6 +41,9 @@ Breaking Changes (Packaging only)
 
 Changes
 =======
+ 
+ - Added column ``username`` to ``sys.jobs`` and ``sys.jobs_log`` that contains
+   the username under which the job was invoked.
 
  - Upgraded the Admin UI to 1.3.3
 
